[package]
name = "mimirsbrunn"
version = "2.0.0-rc1"
authors = ["Kisio Digital", "Qwant"]
build = "build.rs"
autotests = false
edition = "2021"
description = "Set of tools for geocoding with Elasticsearch"
license = "AGPLv3"
repository = "https://github.com/CanalTP/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "application" ]
readme = "README.md"

[workspace]
members = [
  "libs/mimir",
  "libs/places",
  "libs/common",
	"libs/tests",
]

[features]
db-storage = [ "rusqlite" ]

[dependencies]
address-formatter = "0.2.1"
async-compression = { version = "0.3.8", features = [ "gzip", "tokio" ] }
bincode = "1.3.3"
chrono = "0.4"
chrono-tz = "0.5"
clap = "2.33.1"
cosmogony = "0.10.3"
csv = "1.1"
csv-async = {version = "1.2", features = ["tokio", "with_serde"]}
failure = "0.1"
futures = "0.3"
geo = "0.18"
geo-types = { version = "0.7", features = [ "rstar" ] }
http = "0.2"
human-sort = "0.2"
itertools = "0.10"
lazy_static = "1.4"
log = { version = "0.4", features = ["release_max_level_debug"] }
navitia-poi-model = "0.3"
num_cpus = "1.13"
osm_boundaries_utils = "0.9"
osmpbfreader = "0.14"
par-map = "0.1.4"
regex = "1"
rstar = "0.8"
rusqlite = { version = "0.23", optional = true }
serde_json = "1"
serde = {version = "1", features = ["rc"]}
snafu = { version = "0.6.10", features = [ "futures" ] }
structopt = "0.3"
tokio = { version = "1.14.0", features = [ "sync", "rt", "rt-multi-thread", "macros", "process" ] }
tokio-stream = { version = "0.1.8", features = [ "fs" ] }
toml = "0.5"
tracing = "0.1.26"
tracing-appender = "0.1.2"
tracing-bunyan-formatter = { version = "0.2", default-features = false }
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.17"
transit_model = "0.42.1"
typed_index_collection = "2.0"
walkdir = "2.3"
warp = { version = "0.3.1" }

common = { path = "libs/common" }
mimir  = { path = "libs/mimir" }
places = { path = "libs/places" }

[dependencies.config]
git = "https://github.com/mehcode/config-rs.git"
branch = "master"
default_features = false
features = ["json", "toml"]

[lib]
name = "mimirsbrunn"
path = "src/lib.rs"

[dev-dependencies]
async-trait = "0.1.50"
url = { version = "2.2.2", features = [ "serde" ] }
approx = "0.5"
criterion = "0.3"
cucumber = { package = "cucumber_rust", version = "0.9" }
elasticsearch = "7.14.0-alpha.1"
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
serial_test = "0.5.1"
tests = { path = "libs/tests" }
zip = "0.5.13"

[build-dependencies]
json = "0.12"

[[bin]]
name = "bragi"
path = "src/bragi/main.rs"

[[test]]
name = "end_to_end"
harness = false # Allows Cucumber to print output instead of libtest

[[test]]
name = "idf"
harness = false # Allows Cucumber to print output instead of libtest
test = false

[profile.bench]
lto = true

[[bench]]
name = "listing"
harness = false

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "searching"
harness = false


