[package]
name = "mimirsbrunn"
version = "2.12.0"
authors = ["Hove", "Qwant"]
build = "build.rs"
autotests = false
edition = "2021"
description = "Set of tools for geocoding with Elasticsearch"
license = "AGPLv3"
repository = "https://github.com/hove-io/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "application" ]
readme = "README.md"

[workspace]
members = [
  "libs/mimir",
  "libs/places",
  "libs/common",
  "libs/tests",
]

[features]
db-storage = [ "bincode", "rusqlite" ]

[dependencies]
address-formatter = "0.2"
anyhow = "1.0"
bincode = { version = "1.3", optional = true }
chrono = "0.4"
chrono-tz = "0.6"
clap = { version = "3", features = ["derive"] }
config = { version = "0.11", default_features = false, features = ["json", "toml"] }
cosmogony = "0.11"
csv = "1.2"
csv-async = {version = "1.2", features = ["tokio", "with_serde"]}
flate2 = "1"
futures = "0.3"
geo = "0.18"
geo-types = { version = "0.7", features = [ "rstar" ] }
http = "0.2"
human-sort = "0.2"
itertools = "0.10"
lazy_static = "1.4"
log = { version = "0.4", features = ["release_max_level_debug"] }
navitia-poi-model = "0.5"
num_cpus = "1.15"
osm_boundaries_utils = "0.10"
osmpbfreader = "0.15"
par-map = "0.1.4"
regex = "1"
rstar = "0.8"
rusqlite = { version = "0.26", optional = true }
serde_json = "1"
serde = {version = "1", features = ["rc"]}
snafu = { version = "0.7", features = [ "futures" ] }
tokio = { version = "1.14.0", features = [ "sync", "rt", "rt-multi-thread", "macros", "process" ] }
tokio-stream = { version = "0.1.8", features = [ "fs" ] }
toml = "0.5"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-futures = { version =  "0.2.5", features = [ "futures-03" ] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
transit_model = "0.43"
typed_index_collection = "2.0"
walkdir = "2.3"
warp = { version = "0.3.1" }

common = { path = "libs/common" }
mimir  = { path = "libs/mimir" }
places = { path = "libs/places" }

[lib]
name = "mimirsbrunn"
path = "src/lib.rs"

[dev-dependencies]
async-trait = "0.1.50"
url = { version = "2.2.2", features = [ "serde" ] }
approx = "0.5"
criterion = "0.3"
cucumber = "0.10"
elasticsearch = "7.14.0-alpha.1"
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
serial_test = "0.5.1"
tests = { path = "libs/tests" }
zip = { version = "0.5.13", default_features = false }

[build-dependencies]
json = "0.12"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[[bin]]
name = "bragi"
path = "src/bragi/main.rs"

[profile.bench]
lto = true

[[bench]]
name = "listing"
harness = false

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "searching"
harness = false
