[package]
name = "bragi"
version = "1.2.0"
authors = ["dt.ro <dt.ro@canaltp.fr>"]
edition = "2018"

[dependencies]
structopt = "0.2"
slog = { version = "2.1", features = ["max_level_trace", "release_max_level_info"]}
slog-scope = "4.0"
rs-es = { git = "https://github.com/antoine-de/rs-es.git", branch = "clonable_client", version = "^0.11.4", features = ["geo"]}
serde = {version = "1", features = ["rc"]}
serde_json = "1"
geojson = "0.15"
geo-types = "0.4"
lazy_static = "1"
prometheus = {version= "0.3", features = ["process"]}
heck = "0.3"
failure = "0.1"
num_cpus = "1.8"
cosmogony = "0.6"
actix-web = "0.7"
actix = "0.7"
serde_qs = "0.4"
futures = "0.1"

[dependencies.mimir]
path = "../mimir"

[dev-dependencies.docker_wrapper]
path = "../docker_wrapper"

[dev-dependencies.tools]
path = "../tools"

[dev-dependencies]
reqwest = "=0.9.16"

[build-dependencies]
git-version = "0.2"
