[package]
name = "bragi"
version = "1.2.0"
authors = ["dt.ro <dt.ro@canaltp.fr>"]
edition = "2018"

[dependencies]
structopt = "0.2"
slog = { version = "2.4", features = ["max_level_trace", "release_max_level_info"]}
slog-scope = "4.1"
rs-es = { git = "https://github.com/CanalTP/rs-es.git", rev = "577c86cd92fe4", version = "^0.11.4", features = ["geo"]}
serde = {version = "1", features = ["rc"]}
serde_json = "1"
geojson = { version = "0.16", features = ["geo-types"] }
geo-types = "0.4"
lazy_static = "1"
prometheus = {version= "0.7", features = ["process"]}
heck = "0.3"
failure = "0.1"
num_cpus = "1"
cosmogony = { git = "https://github.com/antoine-de/cosmogony.git", branch = "update_gep" }
actix-web = "1"
actix-rt = "0.2"
actix-cors = "0.1"
actix-service = "0.4"
actix-http = "0.2"
actix-server-config = "0.1"
serde_qs = "0.5"
futures = "0.1"
mimir = { path = "../mimir" }

[dev-dependencies]
reqwest = "=0.9.16"
docker_wrapper = { path = "../docker_wrapper" }
tools = { path = "../tools" }

[build-dependencies]
git-version = "0.2"
