[package]
name = "bragi"
version = "1.20.0"
authors = ["dt.ro <dt.ro@canaltp.fr>"]
edition = "2018"
description = "Wrapper around Elasticsearch for geocoding"
license = "AGPLv3"
repository = "https://github.com/CanalTP/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "application" ]
readme = "README.md"

[dependencies]
structopt = "0.3"
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_info"]}
slog-scope = "4.3"
rs-es = { git = "https://github.com/canaltp/rs-es", features = ["geo"], version = "0.12.3" }
serde = { version = "1", features = ["rc"]}
serde_json = "1"
geojson = { version = "0.19", features = ["geo-types"] }
geo-types = "0.6.1"
lazy_static = "1"
prometheus = {version= "0.7", features = ["process"]}
heck = "0.3"
failure = "0.1"
num_cpus = "1.13"
cosmogony = "0.9"
actix-web = "1"
actix-rt = "0.2"
actix-cors = "0.1"
actix-service = "0.4"
actix-http = "0.2"
actix-server-config = "0.1"
serde_qs = "0.5"
futures = "0.1"
mimir = { path = "../mimir" }
toml = "0.5.6"
git-version = "0.3"

[dev-dependencies]
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
docker_wrapper = { path = "../docker_wrapper" }
tools = { path = "../tools" }
