[package]
name = "common"
version = "2.15.1"
authors = ["Hove", "Qwant"]
edition = "2021"
description = "Set of tools shared between mimir packages"
license = "AGPLv3"
repository = "https://github.com/hove-io/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "application" ]
readme = "README.md"

[dependencies]
config = { version = "0.11", default_features = false, features = ["json", "toml"] }
serde = { version = "1.0", default_features = false }
snafu = { version = "0.7", features = [ "futures" ] }
