[package]
name = "docker_wrapper"
version = "1.17.0"
authors = ["dt.ro <dt.ro@canaltp.fr>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_info"]}
slog-scope = "4.3"
retry = "0.4"

[dependencies.mimir]
path = "../mimir"
