[package]
name = "docker_wrapper"
version = "1.20.0"
authors = ["dt.ro <dt.ro@canaltp.fr>"]
edition = "2018"
description = "Docker Wrapper"
license = "AGPLv3"
repository = "https://github.com/CanalTP/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "tools" ]
readme = "README.md"

[dependencies]
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_info"]}
slog-scope = "4.3"
retry = "0.4"

[dependencies.mimir]
path = "../mimir"
