[package]
name = "mimir"
version = "2.12.0"
authors = ["Hove", "Qwant"]
edition = "2021"
description = "library for manipulating document index, based on elasticsearch"
license = "AGPLv3"
repository = "https://github.com/hove-io/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch"]
categories = [ "application" ]
readme = "README.md"

[features]
metrics = ["prometheus"]
default = ["metrics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.67"
bollard = "0.11.1"
chrono = { version = "0.4", features = [ "serde" ] }
common = { path = "../common" }
config = { version = "0.11", default_features = false, features = ["json", "toml"] }
convert_case = "0.4.0"
cosmogony = "0.11"
elasticsearch = "7.14.0-alpha.1"
futures = "0.3"
geo-types = "0.7"
geo = "0.16"
geojson = { version = "0.22", features = ["geo-types"] }
http = "0.2"
lazy_static = "1.4"
places = { path = "../places" }
regex = "1.7.1"
semver = "1.0.17"
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = "1.0"
serde_qs = "0.8"
serde_with = "1.11"
snafu = { version = "0.7", features = [ "futures" ] }
tokio = { version = "1.26.0", features = [ "sync", "rt-multi-thread", "macros", "process" ] }
tokio-stream = { version = "0.1.12", features = [ "fs" ] }
toml = "0.5"
tracing = "0.1.37"
tracing-futures = { version =  "0.2.5", features = [ "futures-03" ] }
url = { version = "2.3", features = [ "serde" ] }
warp = "0.3.3"
prometheus = {version = "0.13.3", optional = true}

[dev-dependencies]
criterion = { version = "0.3", features = [ "async_tokio" ] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
rand = "0.8"
serial_test = "0.5.1"

[lib]
name = "mimir"
path = "src/lib.rs"
