[package]
name = "mimir2"
version = "0.1.0"
authors = ["crocme10 <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "2.8", features = [ "chrono", "tracing" ] }
async-graphql-warp = "2.8"
async-trait = "0.1.50"
# Should be in dev, but cannot get cucumber to work otherwise
bollard = "0.10.1"
chrono = { version = "0.4", features = [ "serde" ] }
clap = "2.33.1"
config = "0.10"
elasticsearch = "7.12.0-alpha.1"
erased-serde = "0.3.13"
futures = "0.3"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
places = { path = "../places" }
regex = "1.5.4"
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = "1.0"
snafu = { version = "0.6.10", features = [ "futures" ] }
tokio = { version = "1.6.0", features = [ "sync", "rt-multi-thread", "macros", "process" ] }
toml = "0.5"
tracing = "0.1.26"
tracing-appender = "0.1.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.17"
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.2"
url = "2.2"
warp = "0.3.1"

[dev-dependencies]
mockall = "0.9.1"
criterion = { version = "0.3", features = [ "async_tokio" ] }
cucumber = { package = "cucumber_rust", version = "0.8.3" }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
rand = "0.8"

[lib]
name = "mimir2"
path = "src/lib.rs"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[[bin]]
name = "service"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false
