[package]
name = "mimir2"
version = "0.1.0"
authors = ["crocme10 <matt@area403.org>"]
edition = "2018"
description = "library for manipulating document index, based on elasticsearch"
license = "AGPLv3"
repository = "https://github.com/CanalTP/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch"]
categories = [ "application" ]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Should be in dev, but cannot get cucumber to work otherwise
async-graphql = { version = "2.10", features = [ "chrono", "tracing" ] }
async-graphql-warp = "2.10"
async-trait = "0.1.50"
bollard = "0.11.0"
chrono = { version = "0.4", features = [ "serde" ] }
common = { path = "../common" }
convert_case = "0.4.0"
cosmogony = "0.10.3"
elasticsearch = "7.14.0-alpha.1"
futures = "0.3"
geo-types = "0.7"
geojson = { version = "0.22", features = ["geo-types"] }
http = "0.2"
lazy_static = "1.4"
places = { path = "../places" }
regex = "1.5.4"
semver = "1.0.0"
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = "1.0"
serde_qs = "0.8"
snafu = { version = "0.6.10", features = [ "futures" ] }
tokio = { version = "1.6.0", features = [ "sync", "rt-multi-thread", "macros", "process" ] }
toml = "0.5"
tracing = "0.1.26"
tracing-appender = "0.1.2"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.17"
url = "2.2"
warp = "0.3.1"

[dependencies.config]
git = "https://github.com/mehcode/config-rs.git"
branch = "master"
default_features = false
features = ["json"]

[dev-dependencies]
mockall = "0.9.1"
criterion = { version = "0.3", features = [ "async_tokio" ] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
rand = "0.8"
serial_test = "0.5.1"

[lib]
name = "mimir2"
path = "src/lib.rs"


