[package]
name = "places"
version = "1.0.0-rc2"
authors = ["Kisio Digital", "Qwant"]
edition = "2021"
description = "Set of tools for importing geospatial data into Elasticsearch for geocoding"
license = "AGPLv3"
repository = "https://github.com/CanalTP/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "application" ]
readme = "README.md"

[dependencies]
chrono-tz = "0.5"
common = { path = "../common" }
cosmogony = "0.10"
geo-types = "0.7"
geojson = { version = "0.22", features = ["geo-types"] }
human-sort = "0.2"
navitia-poi-model = "0.3"
serde = { version = "1", features = ["rc"]}
tracing = "0.1.26"
transit_model = "0.42.1"
typed_index_collection = "2.0"

[dependencies.config]
git = "https://github.com/mehcode/config-rs.git"
branch = "master"
default_features = false
