[package]
name = "places"
version = "2.9.0"
authors = ["Kisio Digital", "Qwant"]
edition = "2021"
description = "Set of tools for importing geospatial data into Elasticsearch for geocoding"
license = "AGPLv3"
repository = "https://github.com/CanalTP/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "application" ]
readme = "README.md"

[dependencies]
chrono-tz = "0.6"
config = { version = "0.11", default_features = false, features = ["json", "toml"] }
common = { path = "../common" }
cosmogony = "0.11"
geo-types = "0.7"
geojson = { version = "0.22", features = ["geo-types"] }
human-sort = "0.2"
navitia-poi-model = "0.5"
serde = { version = "1", features = ["rc"]}
tracing = "0.1.26"
transit_model = "0.43"
typed_index_collection = "2.0"
