[package]
name = "places"
version = "2.15.1"
authors = ["Hove", "Qwant"]
edition = "2021"
description = "Set of tools for importing geospatial data into Elasticsearch for geocoding"
license = "AGPLv3"
repository = "https://github.com/hove-io/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "application" ]
readme = "README.md"

[dependencies]
chrono-tz = "0.7.0"
config = { version = "0.11", default_features = false, features = ["json", "toml"] }
common = { path = "../common" }
cosmogony = "0.12"
geo-types = "0.7"
geojson = { version = "0.24", features = ["geo-types"] }
human-sort = "0.2"
navitia-poi-model = "1.0.0"
serde = { version = "1", features = ["rc"]}
tracing = "0.1.37"
transit_model = "0.54"
typed_index_collection = "2.2"
