[package]
name = "skojig"
version = "0.1.0"
authors = ["dt.ro <dt.ro@canaltp.fr>"]

[dependencies]
docopt = "*"
rustc-serialize = "*"
curl = "*"
hyper = "*"
jsonway = "*"
iron = "*"
rustless = "*"
urlencoded = "*"
mdo = "*"
valico = "*"

# test serde niglthy, clean up after
serde = "*"
serde_json = "*"
serde_macros = "*"
