[package]
name = "skojig"
version = "0.1.0"
authors = ["dt.ro <dt.ro@canaltp.fr>"]
build = "build.rs"

[dependencies]
docopt = "*"
rustc-serialize = "*"
curl = "*"
hyper = "*"
jsonway = "*"
iron = "*"
log = "*"
rustless = "*"
urlencoded = "*"
mdo = "*"
valico = "0.8.2"
#rs-es = { version = "*", default-features = false}
serde = "*"
serde_json = "*"
serde_macros = { version = "*", optional = true }

[features]
default = ["serde_codegen", "rs-es/default"]
nightly = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "*", optional = true }
syntex = "0.31.0"

[dependencies.mimir]
path = "../mimir"
default-features = false

[dependencies.rs-es]
# for the moment we use a custom rs_es version, waiting for a PR to be merged
git = "https://github.com/CanalTP/rs-es.git"
rev = "fix_exists"
default-features = false
