[package]
name = "tests"
version = "1.0.0-rc1"
authors = ["Kisio Digital <team.core@kisio.com>", "Qwant", "Guillaume Pinot <texitoi@texitio.eu>"]
edition = "2018"
description = "Set of test utilities for Mimirsbrunn"
license = "AGPLv3"
repository = "https://github.com/CanalTP/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "application" ]
readme = "README.md"

[dependencies]
approx = "0.5"
async-trait = "0.1.50"
common = { path = "../common" }
cucumber = { package = "cucumber_rust", version = "0.9" }
elasticsearch = "7.14.0-alpha.1"
futures = "0.3"
mimir = { path = "../mimir" }
mimirsbrunn = { path = "../.." }
osmpbfreader = "0.14"
places = { path = "../places" }
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
serde = {version = "1", features = ["rc"]}
serde_json = "1"
serial_test = "0.5.1"
snafu = { version = "0.6.10", features = [ "futures" ] }
tokio = { version = "1.6.0", features = [ "rt-multi-thread", "macros", "process" ] }
url = "2.2.2"
zip = "0.5.13"

[dependencies.config]
git = "https://github.com/mehcode/config-rs.git"
branch = "master"
default_features = false
features = ["json", "toml"]


[lib]
name = "tests"
path = "src/lib.rs"
