[package]
name = "tests"
version = "2.7.0"
authors = ["Kisio Digital", "Qwant"]
edition = "2021"
description = "Set of test utilities for Mimirsbrunn"
license = "AGPLv3"
repository = "https://github.com/CanalTP/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "application" ]
readme = "README.md"

[dependencies]
approx = "0.5"
async-trait = "0.1.50"
config = { version = "0.11", default_features = false, features = ["json", "toml"] }
common = { path = "../common" }
cucumber = { package = "cucumber_rust", version = "0.9" }
elasticsearch = "7.14.0-alpha.1"
futures = "0.3"
mimir = { path = "../mimir" }
mimirsbrunn = { path = "../.." }
osmpbfreader = "0.15"
places = { path = "../places" }
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
serde = {version = "1", features = ["rc"]}
serde_json = "1"
serial_test = "0.5.1"
snafu = { version = "0.7", features = [ "futures" ] }
tokio = { version = "1.14.0", features = [ "rt-multi-thread", "macros", "process" ] }
url = "2.2.2"
zip = "0.5.13"

[lib]
name = "tests"
path = "src/lib.rs"
